selfhost/test/typechecker/match/error_forbidden_type_all_branches_never.out
Error at %FILE_NAME%:2:11
Forbidden type for assignment
  |    val x = match 123 {
               ^
Expression has type Never, which can never be used for assignment
